// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - navbar dark renders correctly 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-dark"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              class="bcl-mega-menu"
            >
              <button
                aria-controls="mega-menu-dropdown-megamenu"
                aria-expanded="false"
                aria-haspopup="menu"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <nav
                aria-label="Main mega menu"
                aria-labelledby="dropdown-megamenu"
                class="bcl-mega-menu__container dropdown-menu"
                id="mega-menu-dropdown-megamenu"
              >
                <span
                  aria-hidden="true"
                  class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                  role="presentation"
                  tabindex="0"
                />
                <span
                  class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                />
                <div
                  class="container bcl-focus-island"
                >
                  <div
                    class="container d-lg-none bcl-mega-menu__back-button-block bcl-focus-island"
                  >
                    <button
                      aria-label="Back to main menu"
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="position-relative"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="col-md-12 col-xl-3 position-relative bcl-mega-menu__info"
                      >
                        <div
                          class="content-block"
                        >
                          <h4>
                            About the European Commission
                          </h4>
                          <p>
                            Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          </p>
                          <p
                            class="m-0"
                          >
                            <a
                              class="content-link"
                              href="/example.html"
                            >
                              Discover more
                              <svg
                                class="ms-2-5 bi icon--s"
                              >
                                <use
                                  xlink:href="/icons.svg#arrow-right"
                                />
                              </svg>
                            </a>
                          </p>
                        </div>
                        <div
                          class="shadow-container"
                        >
                          <span
                            class="shadow-bg"
                          />
                        </div>
                      </div>
                      <div
                        class="col-md-12 col-lg-4 col-xl-3 bcl-mega-menu__menu"
                      >
                        <ul
                          class="bcl-mega-menu__items __level-1"
                        >
                          <li
                            class="__parent"
                          >
                            <button
                              aria-expanded="false"
                              type="button"
                            >
                              Base Category Item
                            </button>
                            <div
                              class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                            >
                              <span
                                class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                              />
                              <div
                                class="__header"
                              >
                                <p
                                  class="__label"
                                >
                                  Base Category Item
                                </p>
                              </div>
                              <ul
                                class="bcl-mega-menu__items __level-2"
                              >
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__parent"
                          >
                            <button
                              aria-expanded="false"
                              type="button"
                            >
                              Base Category Item
                            </button>
                            <div
                              class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                            >
                              <span
                                class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                              />
                              <div
                                class="__header"
                              >
                                <p
                                  class="__label"
                                >
                                  Base Category Item
                                </p>
                              </div>
                              <ul
                                class="bcl-mega-menu__items __level-2"
                              >
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                  role="presentation"
                  tabindex="0"
                />
              </nav>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#first"
            >
              I'm a link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 3
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="dropdown-1"
              type="button"
            >
              Dropdown Toggle
            </button>
            <ul
              aria-labelledby="dropdown-1"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  I'm a link
                </a>
              </li>
              <li>
                <button
                  class="dropdown-item"
                  type="button"
                >
                  I'm a button
                </button>
              </li>
              <li>
                <hr
                  class="dropdown-divider"
                />
              </li>
              <li>
                <button
                  aria-disabled="true"
                  class="dropdown-item"
                  disabled="true"
                  type="button"
                >
                  I'm a disabled button
                </button>
              </li>
              <li>
                <button
                  class="dropdown-item active"
                  type="button"
                >
                  I'm a active button
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar light renders correctly 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              class="bcl-mega-menu"
            >
              <button
                aria-controls="mega-menu-dropdown-megamenu"
                aria-expanded="false"
                aria-haspopup="menu"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <nav
                aria-label="Main mega menu"
                aria-labelledby="dropdown-megamenu"
                class="bcl-mega-menu__container dropdown-menu"
                id="mega-menu-dropdown-megamenu"
              >
                <span
                  aria-hidden="true"
                  class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                  role="presentation"
                  tabindex="0"
                />
                <span
                  class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                />
                <div
                  class="container bcl-focus-island"
                >
                  <div
                    class="container d-lg-none bcl-mega-menu__back-button-block bcl-focus-island"
                  >
                    <button
                      aria-label="Back to main menu"
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="position-relative"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="col-md-12 col-xl-3 position-relative bcl-mega-menu__info"
                      >
                        <div
                          class="content-block"
                        >
                          <h4>
                            About the European Commission
                          </h4>
                          <p>
                            Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          </p>
                          <p
                            class="m-0"
                          >
                            <a
                              class="content-link"
                              href="/example.html"
                            >
                              Discover more
                              <svg
                                class="ms-2-5 bi icon--s"
                              >
                                <use
                                  xlink:href="/icons.svg#arrow-right"
                                />
                              </svg>
                            </a>
                          </p>
                        </div>
                        <div
                          class="shadow-container"
                        >
                          <span
                            class="shadow-bg"
                          />
                        </div>
                      </div>
                      <div
                        class="col-md-12 col-lg-4 col-xl-3 bcl-mega-menu__menu"
                      >
                        <ul
                          class="bcl-mega-menu__items __level-1"
                        >
                          <li
                            class="__parent"
                          >
                            <button
                              aria-expanded="false"
                              type="button"
                            >
                              Base Category Item
                            </button>
                            <div
                              class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                            >
                              <span
                                class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                              />
                              <div
                                class="__header"
                              >
                                <p
                                  class="__label"
                                >
                                  Base Category Item
                                </p>
                              </div>
                              <ul
                                class="bcl-mega-menu__items __level-2"
                              >
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__parent"
                          >
                            <button
                              aria-expanded="false"
                              type="button"
                            >
                              Base Category Item
                            </button>
                            <div
                              class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                            >
                              <span
                                class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                              />
                              <div
                                class="__header"
                              >
                                <p
                                  class="__label"
                                >
                                  Base Category Item
                                </p>
                              </div>
                              <ul
                                class="bcl-mega-menu__items __level-2"
                              >
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                  role="presentation"
                  tabindex="0"
                />
              </nav>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#first"
            >
              I'm a link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 3
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="dropdown-1"
              type="button"
            >
              Dropdown Toggle
            </button>
            <ul
              aria-labelledby="dropdown-1"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  I'm a link
                </a>
              </li>
              <li>
                <button
                  class="dropdown-item"
                  type="button"
                >
                  I'm a button
                </button>
              </li>
              <li>
                <hr
                  class="dropdown-divider"
                />
              </li>
              <li>
                <button
                  aria-disabled="true"
                  class="dropdown-item"
                  disabled="true"
                  type="button"
                >
                  I'm a disabled button
                </button>
              </li>
              <li>
                <button
                  class="dropdown-item active"
                  type="button"
                >
                  I'm a active button
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar renders correctly with disable collapse 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <ul
        class="me-auto navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="bcl-mega-menu"
          >
            <button
              aria-controls="mega-menu-dropdown-megamenu"
              aria-expanded="false"
              aria-haspopup="menu"
              autocomplete="off"
              class="dropdown-toggle nav-link btn btn-link btn-md"
              data-bs-auto-close="outside"
              data-bs-toggle="dropdown"
              id="dropdown-megamenu"
              type="button"
            >
              A link with dropdown
            </button>
            <nav
              aria-label="Main mega menu"
              aria-labelledby="dropdown-megamenu"
              class="bcl-mega-menu__container dropdown-menu"
              id="mega-menu-dropdown-megamenu"
            >
              <span
                aria-hidden="true"
                class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                role="presentation"
                tabindex="0"
              />
              <span
                class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
              />
              <div
                class="container bcl-focus-island"
              >
                <div
                  class="container d-lg-none bcl-mega-menu__back-button-block bcl-focus-island"
                >
                  <button
                    aria-label="Back to main menu"
                    class="back-button btn btn-link btn-md"
                    type="button"
                  >
                    <svg
                      class="me-2-5 bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#arrow-left"
                      />
                    </svg>
                    Back
                  </button>
                </div>
                <div
                  class="position-relative"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-12 col-xl-3 position-relative bcl-mega-menu__info"
                    >
                      <div
                        class="content-block"
                      >
                        <h4>
                          About the European Commission
                        </h4>
                        <p>
                          Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                        <p
                          class="m-0"
                        >
                          <a
                            class="content-link"
                            href="/example.html"
                          >
                            Discover more
                            <svg
                              class="ms-2-5 bi icon--s"
                            >
                              <use
                                xlink:href="/icons.svg#arrow-right"
                              />
                            </svg>
                          </a>
                        </p>
                      </div>
                      <div
                        class="shadow-container"
                      >
                        <span
                          class="shadow-bg"
                        />
                      </div>
                    </div>
                    <div
                      class="col-md-12 col-lg-4 col-xl-3 bcl-mega-menu__menu"
                    >
                      <ul
                        class="bcl-mega-menu__items __level-1"
                      >
                        <li
                          class="__parent"
                        >
                          <button
                            aria-expanded="false"
                            type="button"
                          >
                            Base Category Item
                          </button>
                          <div
                            class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                          >
                            <span
                              class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                            />
                            <div
                              class="__header"
                            >
                              <p
                                class="__label"
                              >
                                Base Category Item
                              </p>
                            </div>
                            <ul
                              class="bcl-mega-menu__items __level-2"
                            >
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                            </ul>
                          </div>
                        </li>
                        <li
                          class="__leaf"
                        >
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                        </li>
                        <li
                          class="__parent"
                        >
                          <button
                            aria-expanded="false"
                            type="button"
                          >
                            Base Category Item
                          </button>
                          <div
                            class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                          >
                            <span
                              class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                            />
                            <div
                              class="__header"
                            >
                              <p
                                class="__label"
                              >
                                Base Category Item
                              </p>
                            </div>
                            <ul
                              class="bcl-mega-menu__items __level-2"
                            >
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li
                                class="__leaf"
                              >
                                <a
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                            </ul>
                          </div>
                        </li>
                        <li
                          class="__leaf"
                        >
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                        </li>
                        <li
                          class="__leaf"
                        >
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                        </li>
                        <li
                          class="__leaf"
                        >
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-hidden="true"
                class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                role="presentation"
                tabindex="0"
              />
            </nav>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="#first"
          >
            I'm a link
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/example.html"
          >
            I'm a link 2
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/example.html"
          >
            I'm a link 3
          </a>
        </li>
        <li
          class="nav-item dropdown"
        >
          <button
            aria-expanded="false"
            autocomplete="off"
            class="dropdown-toggle btn btn-primary btn-md"
            data-bs-toggle="dropdown"
            id="dropdown-1"
            type="button"
          >
            Dropdown Toggle
          </button>
          <ul
            aria-labelledby="dropdown-1"
            class="dropdown-menu"
          >
            <li>
              <a
                class="dropdown-item"
                href="/example.html"
              >
                I'm a link
              </a>
            </li>
            <li>
              <button
                class="dropdown-item"
                type="button"
              >
                I'm a button
              </button>
            </li>
            <li>
              <hr
                class="dropdown-divider"
              />
            </li>
            <li>
              <button
                aria-disabled="true"
                class="dropdown-item"
                disabled="true"
                type="button"
              >
                I'm a disabled button
              </button>
            </li>
            <li>
              <button
                class="dropdown-item active"
                type="button"
              >
                I'm a active button
              </button>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar renders correctly with expand small 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-sm navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              class="bcl-mega-menu"
            >
              <button
                aria-controls="mega-menu-dropdown-megamenu"
                aria-expanded="false"
                aria-haspopup="menu"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <nav
                aria-label="Main mega menu"
                aria-labelledby="dropdown-megamenu"
                class="bcl-mega-menu__container dropdown-menu"
                id="mega-menu-dropdown-megamenu"
              >
                <span
                  aria-hidden="true"
                  class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                  role="presentation"
                  tabindex="0"
                />
                <span
                  class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                />
                <div
                  class="container bcl-focus-island"
                >
                  <div
                    class="container d-lg-none bcl-mega-menu__back-button-block bcl-focus-island"
                  >
                    <button
                      aria-label="Back to main menu"
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="position-relative"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="col-md-12 col-xl-3 position-relative bcl-mega-menu__info"
                      >
                        <div
                          class="content-block"
                        >
                          <h4>
                            About the European Commission
                          </h4>
                          <p>
                            Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          </p>
                          <p
                            class="m-0"
                          >
                            <a
                              class="content-link"
                              href="/example.html"
                            >
                              Discover more
                              <svg
                                class="ms-2-5 bi icon--s"
                              >
                                <use
                                  xlink:href="/icons.svg#arrow-right"
                                />
                              </svg>
                            </a>
                          </p>
                        </div>
                        <div
                          class="shadow-container"
                        >
                          <span
                            class="shadow-bg"
                          />
                        </div>
                      </div>
                      <div
                        class="col-md-12 col-lg-4 col-xl-3 bcl-mega-menu__menu"
                      >
                        <ul
                          class="bcl-mega-menu__items __level-1"
                        >
                          <li
                            class="__parent"
                          >
                            <button
                              aria-expanded="false"
                              type="button"
                            >
                              Base Category Item
                            </button>
                            <div
                              class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                            >
                              <span
                                class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                              />
                              <div
                                class="__header"
                              >
                                <p
                                  class="__label"
                                >
                                  Base Category Item
                                </p>
                              </div>
                              <ul
                                class="bcl-mega-menu__items __level-2"
                              >
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__parent"
                          >
                            <button
                              aria-expanded="false"
                              type="button"
                            >
                              Base Category Item
                            </button>
                            <div
                              class="bcl-mega-menu__submenu __level-2 bcl-focus-island"
                            >
                              <span
                                class="invisible visually-hidden d-xl-none bcl-focus-island-curse"
                              />
                              <div
                                class="__header"
                              >
                                <p
                                  class="__label"
                                >
                                  Base Category Item
                                </p>
                              </div>
                              <ul
                                class="bcl-mega-menu__items __level-2"
                              >
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li
                                  class="__leaf"
                                >
                                  <a
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                          <li
                            class="__leaf"
                          >
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="visually-hidden bcl-focus-sentinel __start d-xl-none"
                  role="presentation"
                  tabindex="0"
                />
              </nav>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#first"
            >
              I'm a link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 3
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="dropdown-1"
              type="button"
            >
              Dropdown Toggle
            </button>
            <ul
              aria-labelledby="dropdown-1"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  I'm a link
                </a>
              </li>
              <li>
                <button
                  class="dropdown-item"
                  type="button"
                >
                  I'm a button
                </button>
              </li>
              <li>
                <hr
                  class="dropdown-divider"
                />
              </li>
              <li>
                <button
                  aria-disabled="true"
                  class="dropdown-item"
                  disabled="true"
                  type="button"
                >
                  I'm a disabled button
                </button>
              </li>
              <li>
                <button
                  class="dropdown-item active"
                  type="button"
                >
                  I'm a active button
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</jest>
`;
